--- a/thesis/ThesisSpecificPages/bio.tex
+++ b/thesis/ThesisSpecificPages/bio.tex
@@ -2,7 +2,6 @@
 \chapter*{Biography}
 \addcontentsline{toc}{chapter}{Biography}
 
-{Saurabh Tewari} is working as a senior staff engineer with Qualcomm India. He completed his Ph.D. from the Department of Computer Science and Engineering at IIT Delhi in November 2022. He obtained a Bachelor's degree (B.Tech.) from Indian Institute of Technology (IIT) Roorkee and Master's degreee from IIT Delhi in 2013. 
+{Saurabh Tewari} is a Ph.D. student at the Department of Computer Science and Engineering at IIT Delhi. He also works as a senior staff engineer with Qualcomm India. Saurabh holds a Bachelor's degree (B.Tech.) from the Indian Institute of Technology (IIT) Roorkee and completed his Master's degree at IIT Delhi in 2013.
 
-He has been awarded as outstanding teaching assistant (TA) at IIT Delhi.
-His research interests include mapping algorithms on parallel and reconfigurable architectures, compilers and computer archictectures.
+At IIT Delhi, Saurabh has been recognized for his teaching abilities and awarded as an Outstanding Teaching Assistant (TA). His research interests encompass mapping algorithms on parallel and reconfigurable architectures, machine learning, deep neural networks, software compilers, and computer architectures.
